--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>MERN Template</title>
+	<title>Cinema Safe</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Galada" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
